tests/miniJava/neg/002958_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = this System.out.println ; } }
